fix select visibility in sample edit form

--- a/frontend/app/assets/css/bootstrap/less/lists.less
+++ b/frontend/app/assets/css/bootstrap/less/lists.less
@@ -4,7 +4,6 @@
     flex-wrap: wrap;
   dl {
     width: 50%;
-    overflow: hidden;
     margin-bottom: 12px;
      dd {
     &:extend(.clearfix all); // Clear the floated `dt` if an empty `dd` is present
